-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 20, 21
-
Component/s: hotspot
-
b13
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8307037 | 20u-cpu | Tobias Hartmann | P3 | Resolved | Fixed | master |
| JDK-8305558 | 20.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b03 |
| JDK-8305135 | 17.0.8-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8307614 | 17.0.8 | Goetz Lindenmaier | P3 | Resolved | Fixed | b02 |
| JDK-8305145 | 11.0.20-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
When CodeBuffer::expand fails, MacroAssembler::emit_trampoline_stub fails on Aarch64. The following call chain does not handle this properly:
CodeInstaller::site_Call -> CodeInstaller::pd_relocate_JavaMethod -> NativeCall::trampoline_jump -> MacroAssembler::emit_trampoline_stub
Similar, CompiledStaticCall::emit_to_interp_stub can fail as well and needs to be handled in CodeInstaller::site_Call.
- backported by
-
JDK-8305135 [JVMCI] Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
-
JDK-8305145 [JVMCI] Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
-
JDK-8305558 [JVMCI] Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
-
JDK-8307037 [JVMCI] Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
-
JDK-8307614 [JVMCI] Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
- relates to
-
JDK-8298720 Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/3a0aff20
-
Commit
openjdk/jdk20u/a43d7504
-
Commit
openjdk/jdk/ad326fc6
-
Review
openjdk/jdk17u-dev/1308
-
Review
openjdk/jdk20u/44
-
Review(master)
openjdk/jdk/11945