8299570: [JVMCI] Insufficient error handling when CodeBuffer is exhausted

Reviewed-by: shade
Backport-of: ad326fc62be9fa29438fb4b59a51c38dd94afd68